# ra

./: .gitignore  CMakeLists.txt  main.cpp  run.sloth
android/app/: build.gradle.kts
cpp/: CMakeLists.txt  README.md  configure.sloth
dart/: .metadata  README.md  pubspec.yaml
dart/android/app/src/main/: AndroidManifest.xml
dart/android/app/src/main/kotlin/com/example/flutter_rogue_adventure/: MainActivity.kt
dart/ios/Runner.xcodeproj/: project.pbxproj
dart/lib/: clock.dart  game.dart  globals.dart  hero.dart  progression.dart  ui.dart  view.dart
dart/macos/Runner.xcodeproj/: project.pbxproj
dart/macos/Runner/Configs/: AppInfo.xcconfig
dart/test/: widget_test.dart
dart/web/: index.html
dart/windows/runner/: Runner.rc  main.cpp
ios/Runner/: Info.plist
lib/: card.cpp  clock.dart  game.dart  hero.dart  lib.cpp  main.dart  progression.dart  ui.dart  view.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
test/: widget_test.dart
web/: manifest.json
windows/: CMakeLists.txt
